--- a/src/app.postcss
+++ b/src/app.postcss
@@ -14,3 +14,20 @@ body {
 	src: url('/fonts/AbrilFatface.ttf');
 	font-display: swap;
 }
+@font-face {
+	font-family: 'Kalam';
+	src: url('/fonts/Kalam-Light.ttf') format('truetype');
+	font-weight: 300;
+}
+
+@font-face {
+	font-family: 'Kalam';
+	src: url('/fonts/Kalam-Regular.ttf') format('truetype');
+	font-weight: 400;
+}
+
+@font-face {
+	font-family: 'Kalam';
+	src: url('/fonts/Kalam-Bold.ttf') format('truetype');
+	font-weight: 700;
+}
