Add Love Notes font and update styles in connect page

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -31,3 +31,9 @@ body {
 	src: url('/fonts/Kalam-Bold.ttf') format('truetype');
 	font-weight: 700;
 }
+
+@font-face {
+	font-family: 'Love Notes';
+	src: url('fonts/Love Notes.ttf') format('truetype');
+	font-weight: 500;
+}
